src/main/kotlin/com/example/moiza/global/error/ErrorResponse.kt
package com.example.moiza.global.error

data class ErrorResponse(
    val status: Int,
    val message: String
)